# tau-com-toy

./: .gitignore  README.md  README_oneof.md  action.proto  combined.proto  commands.capnp  commands.proto  options.proto  state.proto  substate.proto  validate.proto
.github/workflows/: rust-build.yml
cli/: .gitignore  README.md  cli.py  pyproject.toml
cli/cli/: __main__.py  cli.py
cli/cli/pb2/: .gitignore
cli/pb2/: .gitignore
dif-print/: Cargo.toml
dif-print/src/: lib.rs
meta/: meta.proto
payload/: Cargo.toml  build.rs
payload/src/: fmt.rs  fridge.rs  main.rs  rich_defaults.rs
prost-metadata/: Cargo.toml
prost-metadata/src/: lib.rs
protos/: dynamic.proto  state.proto  substate.proto
protos/include/: hk.proto
python-client/: .gitignore  action_pb2.py  app.py  client.py  combined_pb2.py  get_file_descriptor_set.py  requirements.txt  state_pb2.py  substate_pb2.py
python-client/meta/: meta_pb2.py
python-client/static/: script.js  style.css
python-client/templates/: base.html  homepage.html  message_view.html  nested.html
rusty-client/: Cargo.toml  options.rs  validate.example.rs  validate.rs
rusty-client/src/: main.rs
