[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taucommand"
version = "0.1.0"
description = "CLI to send protobuf commands"
requires-python = ">=3.8"

dependencies = [
    "typer[all]",
    "protobuf",
    "protoc_gen_validate",
]

[project.scripts]
taucommand = "cli.cli:app"
