[package]
name = "payload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
capnp = "0.20" # Note this is a different library than capnp*c*
prost = "0.13.3"
prost-validate = { version = "0.2.6", features = ["derive"] }


[build-dependencies]
capnpc = "0.20"
prost-build = "0.13.3"
prost-validate-build = "0.2.6"
prost-metadata = {path = "../prost-metadata"}
