[package]
name = "payload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# capnp = "0.20" # Note this is a different library than capnp*c*
prost = "0.13.3"
prost-validate = { version = "0.2.6", features = ["derive"] }
dif-print = { path = "../dif-print" }
prost-reflect = { version = "0.14.2", features = ["derive"] }
# prost-metadata = { path = "../prost-metadata" }
# prost-metadata-macro = { path = "../prost-metadata-macro" }


[build-dependencies]
# capnpc = "0.20"
prost-build = "0.13.3"
prost-reflect-build = "0.14.0"
prost-validate-build = "0.2.6"
# prost-metadata-build = {path = "../prost-metadata-build"}
