[package]
name = "prost-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-validate-build = "0.2.6"
prost-build = "0.13.3"
heck = "0.5.0"

[lints.clippy]
panic = "allow"
unwrap_used = "allow"
expect_used = "allow"